src/test/deca/context/invalid/new-float.deca
// Description:
//    Utilisation de new pour créer un float
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes (rule 3.42)
//

{
    new float();
}
